<resources>
    <string name="app_name">Nastaqeem</string>
    <string name="name_company">Designed by Amar Digital Solutions</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sholat_tracker">Sholat tracker</string>
    <string name="tahfidz">Tahfidz</string>
    <string name="tilawah">Tilawah</string>
    <string name="murajaah">Murajaah</string>
    <string name="shaum">Shaum</string>
    <string name="custom_tracker">Custom Tracker</string>
    <string name="title_activity_tab">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>