<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:columnCount="3"
        app:rowCount="3"
        app:orientation="horizontal"
        tools:context=".fragments.HomeFragment">
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/sholat_tracker"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/tahfidz"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/tilawah"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/murajaah"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/shaum"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>
        <FrameLayout
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/custom_tracker"
                    android:textColor="#000"
                    android:textSize="12sp" />
            </RelativeLayout>
        </FrameLayout>


    </androidx.gridlayout.widget.GridLayout>


</LinearLayout>


